[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "cyberbrain"
version = "0.2.2"
description = "Python debugging, redefined."
authors = [
    {name = "laike9m", email = "laike9m@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.7,<4.0"
dynamic = ["classifiers"]
readme = "README.md"
keywords = ["debugging", "debugger", "visualization"]
dependencies = [
    "pygments<3.0.0,>=2.6.1",
    "crayons<1.0.0,>=0.3.0",
    "shortuuid<2.0.0,>=1.0.1",
    "attrs<21.0.0,>=20.0.0",
    "get-port<1.0.0,>=0.0.5",
    "typing-extensions<4.0.0,>=3.7.4",
    "more-itertools<9.0.0,>=8.5.0",
    "cheap-repr<1.0.0,>=0.4.2",
    "ujson==4.1.0",  # https://github.com/ultrajson/ultrajson/issues/482
    "jsonpickle<2.0.0,>=1.4.1",
    "portpicker<2.0.0,>=1.3.1",
    "msgpack<2.0.0,>=1.0.2",
    "requests<3.0.0,>=2.25.1",
]

[project.urls]
Funding = "https://github.com/sponsors/laike9m"
"Bug Tracker" = "https://github.com/laike9m/Cyberbrain/issues"
homepage = "https://github.com/laike9m/Cyberbrain"
repository = "https://github.com/laike9m/Cyberbrain"

[tool.pdm.dev-dependencies]
# Pckages essential for tests, installed before running tests.
dev = [
    "tox<4.0,>=3.14",
    "tox-pdm~=0.3",
    "pytest-xdist<2.0,>=1.31",
    "pytest<7.0.0,>=6.0.1",
    "pyhamcrest<3.0.0,>=2.0.2",
    "responses<1.0.0,>=0.12.1",
    "detect<2021.0.0,>=2020.7.1",
    "bytecode<1.0.0,>=0.11.0",
    "ptpython<4.0.0,>=3.0.7",
    "pdir2<1.0.0,>=0.3.1",
    "tox-gh-actions~=2.8",
    "twine~=3.4",
]

[project.optional-dependencies]
# why 1.18? https://stackoverflow.com/q/64465836/2142577
extra_tests = ["numpy==1.18", "pandas==1.1.3"]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pylint.messages_control]
disable = """
bad-continuation,attribute-defined-outside-init,W0511,R0902,R0913,W0622,C0116,C0103,
R0903,W0631,W0212,W0603,R1710,R0201
"""

[tool.pytest.ini_options]
testpaths = [ # Used to speed up test discovery.
    "test",
]
# Not entirely sure if this is useful, but there's no harm adding it.
norecursedirs = ["cyberbrain-vsc*", ".vscode", "*.egg"]
